# mangashelfapi

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py
app/crud/: __init__.py  manga.py  manga_series.py  manga_volumes.py  oauth.py  publishers.py  stats.py  user.py  user_collection.py  user_manga.py
app/dependencies/: auth.py
app/models/: __init__.py  manga.py  manga_series.py  manga_volumes.py  publishers.py  user.py  user_collection.py  user_manga.py  user_manga_volumes.py
app/routers/: auth.py  collection.py  manga.py  manga_series.py  manga_volumes.py  publishers.py  stats.py  user.py  user_collection.py
app/schemas/: __init__.py  collection.py  manga.py  manga_series.py  manga_volumes.py  oauth.py  publishers.py  stats.py  user.py  user_collection.py
app/services/: oauth.py
app/utils/: security.py
