[project]
name = "mangahselfapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.120.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
]
